* create API functions to access link information values
* add libfvalue

API
* add functions
  - for shell item
  - for icon location block ?
  - for special and/or known folder identifier

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* update macosx package files
* automated tests
  - 2x open/close (bfio and normal)

Bindings:
* .net
* java

20130117
* fixed issue in lnkinfo where date and time values were not printed
  when location info flag was not set

20130116
* 2013 update
* updated dependencies
* updated pylnk
* bug fixes in lnktools
* bug fixes in pylnk

20121205
* changes to msvscpp files for visual studio 2010 build

20121121
* update for missing path separator in network path
* updated msvscpp files

20121120
* update for missing path separator in network path

20121104
* pylnk: fixes for 32-bit build

20121103
* pylnk: bug fixes
* updated dependencies
* fixes to spec file

20121026
* bug fix in new pylnk functions

20121025
* libfwsi update, fixed issues with debug output

20121024
* pylnk: added time_as_integer functions

20121023
* updated dependencies
* bug fixes in pylnk
* code clean up

20120925
* updated dependencies
* fixed issue that file io handle is not cleared on close when passed
* lnkinfo: fixed issue not passing codepage

20120825
* email change
* updated dependencies

20120507
* updated dependencies
* fixed GUID string too small issue
* fixed issue for handling shell items

20120426
* fixes for pkg-config detection of libraries
* applied updates

20120419
* applied updates
* code clean up

20120408
* code clean up

20120407
* updated dependencies

20120406
* updated dependencies

20120319
* worked on Python bindings (pylnk)

20120312
* worked on Python bindings (pylnk)
  - worked on get/set attribute functions
* libfwsi code clean up

20120309
* worked on Python bindings (pylnk)
  - worked on get/set attribute functions

20120307
* worked on Python bindings (pylnk)